# ros2_2026_summer_study

./: 2026.07.21.md  README.md
record/: 2026.07.20.md  2026.07.21.md  2026.07.22.md  2026.07.23.md  2026.07.24.md  226.07.22.md
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/follow_turtle/lib/follow_turtle/: dynamic_turtle_tf2_broadcaster  tf_listener
ros_ws/install/follow_turtle/share/follow_turtle/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/mini_homework1/lib/mini_homework1/: publisher  subscriber1  subscriber2  time_and_topic1_subscriber  time_publisher
ros_ws/install/mini_homework1/share/mini_homework1/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/my_first_package/lib/my_first_package/: action_client  action_server  action_thread_server  action_thread_server.py  action_thread_server1  action_thread_server_professor  class1_pub  class_pub  header_pub  message1_pub  message_pub  message_sub  my_param  my_turtle  my_turtle1  my_turtle_ns  param_async  qos_test_pub  qos_test_sub  service_client  service_server  service_thread_server  simple1_pub  simple_pub  (+2 more)
ros_ws/log/: latest_build
ros_ws/src/follow_turtle/: package.xml  setup.cfg  setup.py
ros_ws/src/mini_homework1/: package.xml  setup.cfg  setup.py
ros_ws/src/mini_homework1/mini_homework1/: publisher.py  subscriber2.py  time_and_topic1_subscriber.py
ros_ws/src/my_first_package/: package.xml  setup.py
ros_ws/src/my_first_package/my_first_package/: action_client.py  action_server.py  my_param.py  param_async.py  service_client.py  simple1_pub.py  simple_pub.py
ros_ws/src/my_first_package/param/: my_param.yaml
ros_ws/src/my_second_package/: package.xml  setup.py
ros_ws/src/tf2_basic/: setup.py
ros_ws/src/tf2_basic/rviz/: urdf.rviz
ros_ws/src/tf2_basic/tf2_basic/: static_turtle_tf2_broadcaster.py
ros_ws/src/user_interface/: CMakeLists.txt  package.xml
(+52 files in other folders)
