<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>user_interface</name>
  <version>0.1.0</version>
  <description>user interface for test</description>
  <maintainer email="jhw0178@gmail.com">jhw0178</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend> #추가한 부분
  
  #std_msgs의 Header를 사용하기 위한 의존성 추가
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend> #추가한 부분
  <member_of_group>rosidl_interface_packages</member_of_group> #추가한 부분

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
